<resources>
    <string name="app_name">My Fitness App</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="motivation_quest">Wherever You Are Health Is Number One</string>
    <string name="next">Next</string>
    <string name="motivation2">There is no instant way to a healthy life</string>
    <string name="get_started">Get Started</string>
    <string name="home_">Home</string>
    <string name="trainings_">Trainings</string>
    <string name="analytics_">Analytics</string>
    <string name="my_profile">My Profile</string>
    <string name="custom_create">Custom</string>
    <string name="height">Height</string>
    <string name="select_gender">Select Gender</string>
    <string name="my_profile_">My Profile</string>
    <string name="remainder">Remainder</string>
    <string name="rate_us">Rate Us</string>
    <string name="feedback">Feedback</string>
    <string name="send">Send</string>
    <string name="feedback_">Feedback…</string>
    <string name="opinion">I will be happy to know your opinion\n about my first App</string>
    <string name="communicate_wit_us">Communicate wit us</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="calories">Calories</string>
    <string name="time">Time</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="gmail">Gmail</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="phone_call">Phone Call</string>
    <string name="enter_date">Enter your date to remainder…</string>
    <string name="set_remainder">Set Remainder</string>
    <string name="cancel">Cancel</string>
    <string name="message">message</string>
    <string name="title">title</string>
    <string name="schedule_notification">Schedule Notification</string>
    <string name="gender">Gender</string>
    <string name="target_weight">Target weight</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_0">0</string>
    <string name="edit_current_weight">Edit current weight</string>
    <string name="set_weight">Set Weight</string>
    <string name="current_date">Current Date</string>
    <string name="today_s_training_plan">Today\'s training plan</string>
    <string name="info">Welcome To My Home Workout App.</string>
    <string name="info1">Here You can find more useful exercises and information about training at home.</string>
    <string name="woman">Woman</string>
    <string name="man">Man</string>
    <string name="sleep">Sleep</string>
    <string name="healthy_food">Healthy Food</string>
    <string name="water">Water</string>
    <string name="workout">Workout</string>
    <string name="_0_0">0.0</string>
    <string name="sleep_info">Sleep gives your body time to recover, conserve energy, and repair and build up the muscles worked during exercise. When we get enough good quality sleep, the body produces growth hormone. During childhood and adolescence, growth hormone makes us grow (as the name implies, Winter says. “And when we are older, it helps us build lean muscle and helps our body repair when we have torn ourselves up during a hard workout,” he adds. “Growth hormone is essential for athletic recovery.”</string>
    <string name="food_info">What are the right foods? Minimally processed foods are the best for sports and weight lifting nutrition. Lean protein, complex carbs and fiber are your best friends, especially if you\'re trying to lose weight. Your body needs lean protein such as turkey, nonfat Greek yogurt, fish and egg whites to build muscle and stay full. Complex carbs, such as green leafy vegetables, give you energy to burn and fiber fills you up and keeps your digestive system and hormones in alignment.Fats should be healthy, mono-saturated fats, such as olive oil, or from plant-based sources rich in omega-3 fatty acids. Walnuts, flaxseeds and similar oils, nuts and seeds provide healthy fats.</string>
    <string name="water_info">Water is nature’s perfect thirst quencher. Drink plenty of fresh, pure water daily, including with meals. Drink about 16 fluid ounces, or two cups of water, about two hours before a workout. Sip water throughout your workout. If you’re working out in hot weather, be sure to drink more water than you think you need. Thirst is a sign that your body is slightlydehydrated. Drink to stay ahead of your thirst.</string>
    <string name="see_my_tasks">See My Tasks</string>
    <string name="task_title">Task title</string>
    <string name="task_description">Task Description</string>
    <string name="add_new_task">Add New Task</string>
    <string name="add">Add</string>
    <string name="abs">ABS</string>
    <string name="arms">Arms</string>
    <string name="custom">Custom</string>
    <string name="legs">Legs</string>
    <string name="rate">Rate</string>
    <string name="short_trainings">Short Trainings</string>
    <string name="create_new_task">Create new Task</string>
    <string name="exit">Exit</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="_2500">/2500</string>
    <string name="_10000">/10000</string>
    <string name="walk_counter">Walk Counter</string>
    <string name="login">Login</string>
    <string name="sing_up">Not a member? Sing up now</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="_null">null</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="armenian">Հայերեն</string>
    <string name="russian">Русский</string>
    <string name="set_language">Set Language</string>
    <string name="change_language">Change Language</string>

    <string name="exit_">Exit?</string>
    <string name="ok">OK</string>
    <string name="cancel_">Cancel</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="wrongEmail">wrong email</string>
    <string name="WrongPassword">wrong password</string>
    <string name="WrongInputs">Wrong inputs</string>
    <string name="withUppercase">Name must start with Uppercase letter</string>
    <string name="ageSize">Age must be higher 10 and lower 80</string>
    <string name="weightSize">Weight must be higher 49 and lower 200</string>
    <string name="heightSize">Height must be higher 129 and lower 260</string>
    <string name="wrongEmail_">Wrong Email format, try again with right one!</string>
    <string name="passwordWrong">Password must be longer than 8 sym., contain one uppercase, one lowercase, one letter and one sym.</string>
    <string name="shotr">Short</string>
    <string name="myTrainings">My Trainings</string>
    <string name="tasks">Tasks</string>
    <string name="set">Set</string>
    <string name="restStepsCounter">Long tap to rest steps</string>
    <string name="rating">\"Rating :: \"</string>
    <string name="totalStars">\"Total Stars:: \"</string>
    <string name="notFound">Not Found</string>
    <string name="deleteItem">Delete this item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="let_s_start">Let\'s start</string>
    <string name="start">Start</string>
    <string name="you_finished_that_exercise_rest_and_enjoy_life">You Finished That Exercise, Rest And Enjoy Life!!!</string>
    <string name="exercising">Exercising</string>
    <string name="restTime">Rest Time</string>
    <string name="exercise">Exercise</string>
    <string name="set_remaind">Set Remainder</string>
    <string name="notification_scheduled">Notification Scheduled</string>
    <string name="titlee">\"Title: \"</string>
    <string name="mess">Message:</string>
    <string name="at">At:</string>
    <string name="non">non</string>
</resources>