<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/trainings"
        android:icon="@drawable/ic_trainings"
        android:orderInCategory="1"
        android:title="@string/trainings_"/>
    <item
        android:id="@+id/custom"
        android:icon="@drawable/ic_custom"
        android:orderInCategory="2"
        android:title="@string/custom_create"
        />
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:orderInCategory="3"
        android:checked="true"
        android:title="@string/home_" />
    <item
        android:id="@+id/analytics"
        android:icon="@drawable/ic_analytics"
        android:orderInCategory="4"
        android:title="@string/analytics_" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile"
        android:orderInCategory="5"
        android:title="@string/my_profile" />

</menu>