<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/communicate_buttom_back">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/space_75"
        android:background="@drawable/facebook"
        android:drawableStart="@drawable/facebook_logo"
        android:text="@string/facebook"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/size_20"
        app:layout_constraintBottom_toTopOf="@+id/btn_instagram"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_instagram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/space_75"
        android:background="@drawable/instagram"
        android:text="@string/instagram"
        android:drawableStart="@drawable/insta_logo"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/size_20"
        app:layout_constraintBottom_toTopOf="@+id/btn_gmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_facebook" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_gmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/space_75"
        android:background="@drawable/gmail_back"
        android:drawableStart="@drawable/email"
        android:text="@string/gmail"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/size_20"
        app:layout_constraintBottom_toTopOf="@+id/btn_whatsapp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_instagram" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_whatsapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/space_75"
        android:background="@drawable/whatsapp_back"
        android:drawableStart="@drawable/watsapp_24"
        android:text="@string/phone_call"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/size_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_gmail" />


</androidx.constraintlayout.widget.ConstraintLayout>