<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_fragments">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Gag"
        android:layout_marginHorizontal="@dimen/space_30"
        android:layout_marginTop="@dimen/space_100"
        android:background="@drawable/edit_text_background"
        android:gravity="center"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingVertical="@dimen/space_20"
        android:textColor="@color/white"
        android:textColorHint="#6A6A6A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_age"
        android:text="65"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_30"
        android:layout_marginTop="@dimen/space_30"
        android:background="@drawable/edit_text_background"
        android:gravity="center"
        android:hint="@string/age"
        android:inputType="number"
        android:paddingVertical="@dimen/space_20"
        android:textColor="@color/white"
        android:textColorHint="#6A6A6A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_name" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_30"
        android:layout_marginTop="@dimen/space_30"
        android:background="@drawable/edit_text_background"
        android:gravity="center"
        android:hint="@string/weight"
        android:text="75"
        android:inputType="number"
        android:paddingVertical="@dimen/space_20"
        android:textColor="@color/white"
        android:textColorHint="#6A6A6A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_age" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_height"
        android:text="175"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_30"
        android:layout_marginTop="@dimen/space_30"
        android:background="@drawable/edit_text_background"
        android:gravity="center"
        android:hint="@string/height"
        android:inputType="number"
        android:paddingVertical="@dimen/space_20"
        android:textColor="@color/white"
        android:textColorHint="#6A6A6A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_weight" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_30"
        android:layout_marginBottom="@dimen/space_20"
        android:background="@drawable/btn_background_before"
        android:gravity="center"
        android:hint="@string/weight"
        android:paddingVertical="@dimen/space_20"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:textColor="@color/gray_btn"
        android:textColorHint="@color/white"
        android:textSize="@dimen/size_26"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_height" />


</androidx.constraintlayout.widget.ConstraintLayout>