<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/back_fragments"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSeeTasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_my_tasks"
        android:paddingHorizontal="@dimen/space_20"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/size_20"
        android:layout_margin="@dimen/space_10"
        android:background="@drawable/layout_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtTitle"
        android:textColorHint="@color/white_blue"
        android:textColor="@color/white"
        android:paddingVertical="@dimen/space_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_50"
        android:layout_marginVertical="@dimen/space_20"
        android:hint="@string/task_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSeeTasks" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtDescription"
        android:textColorHint="@color/white_blue"
        android:textColor="@color/white"
        android:paddingVertical="@dimen/space_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_50"
        android:layout_marginVertical="@dimen/space_20"
        android:hint="@string/task_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTitle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddTask"
        android:textColor="@color/white"
        android:textSize="@dimen/size_20"
        android:background="@drawable/layout_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/space_15"
        android:layout_marginHorizontal="@dimen/space_50"
        android:layout_marginVertical="@dimen/space_20"
        android:text="@string/add_new_task"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/edtDescription" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/new_task_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="btnAddTask, edtDescription,edtTitle, btnSeeTasks" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingTop="@dimen/space_20"
        android:paddingBottom="@dimen/space_20"
        app:layout_constraintBottom_toTopOf="@id/btnTaskCreateStart"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTaskCreateStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/size_20"
        android:background="@drawable/layout_background"
        android:paddingVertical="@dimen/space_15"
        android:layout_marginHorizontal="@dimen/space_50"
        android:layout_marginBottom="@dimen/size_26"
        android:text="@string/create_new_task"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/tasks_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="btnTaskCreateStart, recyclerView" />

</androidx.constraintlayout.widget.ConstraintLayout>