<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_fragments"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_20"
        android:layout_marginTop="@dimen/space_30"
        android:background="@drawable/layout_background"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_my_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_30"
            android:drawableStart="@drawable/ic_person"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:fontFamily="@font/lato"
            android:gravity="center"
            android:paddingVertical="@dimen/space_15"
            android:text="@string/my_profile_"
            android:textColor="@color/white"
            android:textSize="@dimen/size_20"
            app:fontFamily="@font/lato" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="@dimen/space_60"
            android:background="@color/dark_t" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_remainder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_30"
            android:drawableStart="@drawable/ic_baseline_notifications_24"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:fontFamily="@font/lato"
            android:gravity="center"
            android:paddingVertical="@dimen/space_15"
            android:text="@string/remainder"
            android:textColor="@color/white"
            android:textSize="@dimen/size_20"
            app:fontFamily="@font/lato" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="@dimen/space_60"
            android:background="@color/dark_t" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_rate"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_30"
            android:drawableStart="@drawable/ic_baseline_star_rate_24"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:fontFamily="@font/lato"
            android:gravity="center"
            android:paddingVertical="@dimen/space_15"
            android:text="@string/rate_us"
            android:textColor="@color/white"
            android:textSize="@dimen/size_20"
            app:fontFamily="@font/lato" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="@dimen/space_60"
            android:background="@color/dark_t" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_30"
            android:drawableStart="@drawable/ic_baseline_create_24"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:fontFamily="@font/lato"
            android:gravity="center"
            android:paddingVertical="@dimen/space_15"
            android:text="@string/feedback"
            android:textColor="@color/white"
            android:textCursorDrawable="@color/blue_black"
            android:textSize="@dimen/size_20"
            app:fontFamily="@font/lato" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="@dimen/space_60"
            android:background="@color/dark_t" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_30"
            android:drawableStart="@drawable/ic_baseline_share_24"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:fontFamily="@font/lato"
            android:gravity="center"
            android:paddingVertical="@dimen/space_15"
            android:text="@string/share_with_friends"
            android:textColor="@color/white"
            android:textSize="@dimen/size_20"
            app:fontFamily="@font/lato" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="@dimen/space_60"
            android:background="@color/dark_t" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_communicate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_30"
            android:drawableStart="@drawable/ic_baseline_satellite_alt_24"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:fontFamily="@font/lato"
            android:gravity="center"
            android:paddingVertical="@dimen/space_15"
            android:text="@string/communicate_wit_us"
            android:textColor="@color/white"
            android:textSize="@dimen/size_20"
            app:fontFamily="@font/lato" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="@dimen/space_60"
            android:background="@color/dark_t" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_30"
            android:drawableStart="@drawable/ic_exit"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:fontFamily="@font/lato"
            android:gravity="center"
            android:paddingVertical="@dimen/space_15"
            android:text="@string/exit"
            android:textColor="@color/white"
            android:textSize="@dimen/size_20"
            app:fontFamily="@font/lato" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="@dimen/space_60"
            android:background="@color/dark_t" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_30"
            android:drawableStart="@drawable/ic_language"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:fontFamily="@font/lato"
            android:gravity="center"
            android:paddingVertical="@dimen/space_15"
            android:text="@string/language"
            android:textColor="@color/white"
            android:textSize="@dimen/size_20"
            app:fontFamily="@font/lato" />


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>